--- a/templates/layout/head.html
+++ b/templates/layout/head.html
@@ -1,15 +1,21 @@
 <meta charset="utf-8">
+<!-- need to be finished
+<meta name="description" content="">
+<meta name="keywords" content=""-->
+<meta name="author" content="Karol Sliwka">
+<meta name="copyright" content="Karol Sliwka, hello@abovewave.co.uk">
+<meta name="robots" content="index,follow" />
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <!-- Favicon -->
 <link rel="shortcut icon" href="{{url_for('static', filename='images/favicon/favicon.ico')}}" type="image/x-icon">
-<!-- Website title -->
-<title>Baking Master | Become a master of your home!</title>
+<!-- Maxcdn.bootstrapcdn.com -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 <!-- Font Awesome -->
 <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
-<!-- Bootstrap css -->
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 <!-- Hover css -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
 <!-- Main css style -->
 <link rel="stylesheet" href="{{url_for('static', filename='css/main.css')}}" type="text/css" />
+<!-- Website title -->
+<title>Baking Master | Become a master of your home!</title>
