Navigation linkes changed

--- a/scss/components/header/nav.scss
+++ b/scss/components/header/nav.scss
@@ -1,3 +1,8 @@
 .navbar {
-    background-color: red;
+    background-color: $navigation-bg-color;
+    border: none;
+    border-bottom: 1px solid $navigation-border-color;
+    border-radius: 0;
+    
+    
 }
