--- a/templates/components/header/nav.html
+++ b/templates/components/header/nav.html
@@ -6,17 +6,18 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="{{url_for('home')}}">WebSiteName</a>
+      <a class="navbar-brand" href="{{url_for('home')}}">Logo</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">Page 2</a></li>
-        <li><a href="#">Page 3</a></li>
+        <li><a href="{{url_for('recipes')}}">Recipes</a></li>
+        <li><a href="{{url_for('equipement')}}">Equipement</a></li>
+        <li><a href="{{url_for('about')}}">About</a></li>
+        <li><a href="{{url_for('contact')}}">Contact</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        <li><a href="{{url_for('search_results')}}">Search</a></li>
+        <li><a href="{{url_for('my_account')}}">My Account</a></li>
       </ul>
     </div>
   </div>
