--- a/scss/base/variables/variables.scss
+++ b/scss/base/variables/variables.scss
@@ -1,2 +1,5 @@
-$navigation-bg-color: #fff;
-$navigation-border-color: #FF4365;
+$nav-bg-color: #fff;
+$nav-border-color: #FF4365;
+$nav-links-color: #FF4365;
+$nav-link-hv: #fff;
+$nav-link-bg-hv :#FF4365;
