--- a/templates/components/header/nav.html
+++ b/templates/components/header/nav.html
@@ -10,14 +10,14 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li><a href="{{url_for('recipes')}}">Recipes</a></li>
-        <li><a href="{{url_for('equipement')}}">Equipement</a></li>
-        <li><a href="{{url_for('about')}}">About</a></li>
-        <li><a href="{{url_for('contact')}}">Contact</a></li>
+        <li class="hvr-underline-from-left"><a href="{{url_for('recipes')}}">Recipes</a></li>
+        <li class="hvr-underline-from-left"><a href="{{url_for('equipement')}}">Equipement</a></li>
+        <li class="hvr-underline-from-left"><a href="{{url_for('about')}}">About</a></li>
+        <li class="hvr-underline-from-left"><a href="{{url_for('contact')}}">Contact</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="{{url_for('search_results')}}">Search</a></li>
-        <li><a href="{{url_for('my_account')}}">My Account</a></li>
+        <li class="hvr-underline-from-left"><a href="{{url_for('search_results')}}">Search</a></li>
+        <li class="hvr-underline-from-left"><a href="{{url_for('my_account')}}">My Account</a></li>
       </ul>
     </div>
   </div>
