--- a/scss/components/header/nav.scss
+++ b/scss/components/header/nav.scss
@@ -1,5 +1,10 @@
 .navbar-brand {
-    padding: 20px 20px;
+    padding: 10px; //20px 20px;
+}
+
+.logotype {
+    height: 40px;
+    width: 50px;
 }
 
 .navbar {
