--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,7 +16,12 @@ body {
 }
 
 .navbar-brand {
-  padding: 20px 20px;
+  padding: 10px;
+}
+
+.logotype {
+  height: 40px;
+  width: 50px;
 }
 
 .navbar {
