--- a/templates/components/header/nav.html
+++ b/templates/components/header/nav.html
@@ -6,7 +6,9 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="{{url_for('home')}}">Logo</a>
+      <a class="navbar-brand" href="{{url_for('home')}}">
+        <img src="/static/images/logotype/Logotype.png" class="logotype" alt="Baking-Master-Logotype"></img>
+      </a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
