--- a/scss/components/header/nav.scss
+++ b/scss/components/header/nav.scss
@@ -1,9 +1,10 @@
 .navbar-brand {
-    padding: 10px; //20px 20px;
+    margin-left: 0 !important;
+    padding: 5px; //20px 20px;
 }
 
 .logotype {
-    height: 40px;
+    height: 50px;
     width: 50px;
 }
 
