--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,11 +16,12 @@ body {
 }
 
 .navbar-brand {
-  padding: 10px;
+  margin-left: 0 !important;
+  padding: 5px;
 }
 
 .logotype {
-  height: 40px;
+  height: 50px;
   width: 50px;
 }
 
