Website title changed

--- a/templates/layout/head.html
+++ b/templates/layout/head.html
@@ -25,4 +25,4 @@
 <!-- Main css style -->
 <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}" type="text/css" />
 <!-- Website title -->
-<title>Baking Master | Become a master of your home!</title>
+<title>Baking Master | Become a baking master of your home!</title>
