Mobile navigation background, link styles and link hover changed

--- a/scss/base/variables/variables.scss
+++ b/scss/base/variables/variables.scss
@@ -1,5 +1,11 @@
-$nav-bg-color: #fff;
+// main navigation 
+$nav-bg-color: #FFF;
 $nav-border-color: #FF4365;
 $nav-links-color: #FF4365;
-$nav-link-hv: #fff;
+$nav-link-hv: #FFF;
 $nav-link-bg-hv :#FF4365;
+
+// toggle/mobile navigation
+$nav-bg-color-mobile: #FF4365;
+$nav-links-color-mobile: #FFF;
+$nav-link-bg-hv-mobile: #FFF;
