Navigation links font weight changed

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -26,6 +26,7 @@ body {
   color: #FF4365 !important;
   padding-top: 20px;
   padding-bottom: 20px;
+  font-weight: 400;
 }
 
 .hvr-underline-from-left:before {
