--- a/scss/components/header/nav.scss
+++ b/scss/components/header/nav.scss
@@ -10,6 +10,7 @@
             color: $nav-links-color !important;
             padding-top: 20px;
             padding-bottom: 20px;
+            font-weight: 400;
         }
     }
 }
