Keywords and website description added

--- a/templates/layout/head.html
+++ b/templates/layout/head.html
@@ -1,7 +1,6 @@
 <meta charset="utf-8">
-<!-- need to be finished
-<meta name="description" content="">
-<meta name="keywords" content=""-->
+<meta name="description" content="This website, is my 3rd milestone project. Created for education purposes, Code Institute. I've used Python, Flask, JavaScript, Jquery, HTML5, CSS3, SASS, Agile and GIT. This web app was created in AWS Cloud 9 and deployed on Heroku.">
+<meta name="keywords" content="bake, baking, bakery, pastry, chef, chefs, master, masters, class, recipe, recpies, ingridient, ingridients, equipement, preparing time, time, prepare, preparing">
 <meta name="author" content="Karol Sliwka">
 <meta name="copyright" content="Karol Sliwka, hello@abovewave.co.uk">
 <meta name="robots" content="index,follow" />
@@ -13,9 +12,9 @@
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 <link rel="manifest" href="/site.webmanifest">
-<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-<meta name="msapplication-TileColor" content="#da532c">
-<meta name="theme-color" content="#ffffff">
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#FFFFFF">
+<meta name="msapplication-TileColor" content="#FFFFFF">
+<meta name="theme-color" content="#FFFFFF">
 <!-- Maxcdn.bootstrapcdn.com -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 <!-- Font Awesome -->
