Footer coloristic variables added

--- a/scss/base/variables/variables.scss
+++ b/scss/base/variables/variables.scss
@@ -9,3 +9,7 @@ $nav-link-bg-hv :#FF4365;
 $nav-bg-color-mobile: #FF4365;
 $nav-links-color-mobile: #FFF;
 $nav-link-bg-hv-mobile: #FFF;
+
+// footer
+$footer-bg:#FF4365;
+$copyrights-color: #FFF;
