--- a/templates/components/footer/footer.html
+++ b/templates/components/footer/footer.html
@@ -1,7 +1,7 @@
 <footer class="main-footer">
     <div class="flex-footer">
-        <p class="copyrights">2020 - 
-            <span class="year-date"></span> | Created by
+        <p class="copyrights">&copy; 2020 - 
+            <span class="year-date" id="copyright"></span> | Created by
             <a href="mailto:">Karol Sliwka</a>
         </p>
     </div>
