--- a/templates/layout/scripts.html
+++ b/templates/layout/scripts.html
@@ -1,2 +1,5 @@
+<!-- Jquery, Bootstrap JS -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+<!-- Personal script file -->
+<script type="text/javascript" src="{{url_for('static',filename='js/script.js')}}"></script>
