--- a/static/css/style.css
+++ b/static/css/style.css
@@ -24,13 +24,13 @@ body {
 }
 .navbar li a {
   color: #FF4365 !important;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  margin-left: 15px;
+  margin-right: 15px;
+  padding: 20px 0 20px 0;
   font-weight: 400;
 }
 
 .hvr-underline-from-left:before {
-  left: 15px;
   bottom: 15px;
   background: #FF4365;
   height: 2px;
@@ -85,10 +85,6 @@ body {
 
   .hvr-underline-from-left:before {
     background: #FFF !important;
-  }
-
-  .hvr-underline-from-left:hover:before {
-    right: 75%;
   }
 }
 .main-footer {
