--- a/templates/components/header/nav.html
+++ b/templates/components/header/nav.html
@@ -12,14 +12,14 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li class="hvr-underline-from-left"><a href="{{url_for('recipes')}}">Recipes</a></li>
-        <li class="hvr-underline-from-left"><a href="{{url_for('equipement')}}">Equipement</a></li>
-        <li class="hvr-underline-from-left"><a href="{{url_for('about')}}">About</a></li>
-        <li class="hvr-underline-from-left"><a href="{{url_for('contact')}}">Contact</a></li>
+        <li><a href="{{url_for('recipes')}}" class="hvr-underline-from-left">Recipes</a></li>
+        <li><a href="{{url_for('equipement')}}" class="hvr-underline-from-left">Equipement</a></li>
+        <li><a href="{{url_for('about')}}" class="hvr-underline-from-left">About</a></li>
+        <li><a href="{{url_for('contact')}}" class="hvr-underline-from-left">Contact</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li class="hvr-underline-from-left"><a href="{{url_for('search_results')}}">Search</a></li>
-        <li class="hvr-underline-from-left"><a href="{{url_for('my_account')}}">My Account</a></li>
+        <li><a href="{{url_for('search_results')}}" class="hvr-underline-from-left">Search</a></li>
+        <li><a href="{{url_for('my_account')}}" class="hvr-underline-from-left">My Account</a></li>
       </ul>
     </div>
   </div>
