Scalling meta tag changed

--- a/templates/layout/head.html
+++ b/templates/layout/head.html
@@ -1,10 +1,10 @@
-<meta charset="utf-8">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 <meta name="description" content="This website, is my 3rd milestone project. Created for education purposes, Code Institute. I've used Python, Flask, JavaScript, Jquery, HTML5, CSS3, SASS, Agile and GIT. This web app was created in AWS Cloud 9 and deployed on Heroku.">
 <meta name="keywords" content="bake, baking, bakery, pastry, chef, chefs, master, masters, class, recipe, recpies, ingridient, ingridients, equipement, preparing time, time, prepare, preparing">
 <meta name="author" content="Karol Sliwka">
 <meta name="copyright" content="Karol Sliwka, hello@abovewave.co.uk">
 <meta name="robots" content="index,follow" />
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <!-- Favicon -->
 <link rel="shortcut icon" href="{{url_for('static', filename='images/favicon/favicon.ico')}}" type="image/x-icon">
@@ -25,3 +25,4 @@
 <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}" type="text/css" />
 <!-- Website title -->
 <title>Baking Master | Become a baking master of your home!</title>
+    
