Heroku errors possible fix

--- a/templates/layout/head.html
+++ b/templates/layout/head.html
@@ -1,5 +1,5 @@
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="This website, is my 3rd milestone project. Created for education purposes, Code Institute. I've used Python, Flask, JavaScript, Jquery, HTML5, CSS3, SASS, Agile and GIT. This web app was created in AWS Cloud 9 and deployed on Heroku.">
 <meta name="keywords" content="bake, baking, bakery, pastry, chef, chefs, master, masters, class, recipe, recpies, ingridient, ingridients, equipement, preparing time, time, prepare, preparing">
 <meta name="author" content="Karol Sliwka">
