Footer split into 3 columns - about app, menu, newsletter, separate copyrights section

--- a/scss/base/variables/variables.scss
+++ b/scss/base/variables/variables.scss
@@ -11,5 +11,7 @@ $nav-links-color-mobile: #FFF;
 $nav-link-bg-hv-mobile: #FFF;
 
 // footer
-$footer-bg:#FF4365;
+$footer-bg: #FFF;
+$footer-copyrights-bg: #FF4365;
+$footer-link-color: #FF4365;
 $copyrights-color: #FFF;
