--- a/templates/components/footer/footer.html
+++ b/templates/components/footer/footer.html
@@ -6,24 +6,27 @@
             <!-- Logotype and text about company -->
             <div class="col-sm-3 col-md-4 col-lg-4 footer-about-section">
                 <!-- footer main title -->
-                <h4 class="footer-title">Baking Master Web Application</h4>
+                <h4>Baking Master Web Application</h4>
                 <!-- about app section -->
-                <p class="about-company">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde, accusantium. Ipsa excepturi vitae perferendis optio iusto, doloribus modi fugiat eligendi non. Expedita voluptates quas tempora necessitatibus, sunt corporis deleniti eaque.</p>
+                <p class="about-company"></p>
             </div>
             <!-- footer menu -->
             <div class="col-sm-3 col-md-4 col-lg-4">
                 <ul class="footer-menu">
-                    <h4 class="">Menu</h4>
+                    <h4>Menu</h4>
                     <li><a href="{{url_for('recipes')}}" class="footer-link">Recipes</a></li>
                     <li><a href="{{url_for('equipement')}}" class="footer-link">Equipement</a></li>
                     <li><a href="{{url_for('about')}}" class="footer-link">About</a></li>
                     <li><a href="{{url_for('contact')}}" class="footer-link">Contact</a></li>
                     <li><a href="{{url_for('my_account')}}" class="footer-link">My Account</a></li>
-                    <li><a href="{{url_for('site_map')}}" class="footer-link">Site-Map</a></li>
+                    <li><a href="{{url_for('site_map')}}" class="footer-link">Site - Map</a></li>
                 </ul>
             </div>
             <!-- newsletter -->
-            <div class="col-sm-3 col-md-4 col-lg-4">Column</div>
+            <div class="col-sm-3 col-md-4 col-lg-4">
+                <h4>Newsletter</h4>
+                <p class="newsletter-desc">Sign up for our newsletter!</br>Receive notifications about new recipes, baking equipement and all possible discounts codes.</br>Don't be late, we're waiting for you!</p>
+            </div>
         </div>
     </div>
     <!-- copyrights -->
