Footer section, description added, footer menu padding removed

--- a/scss/base/variables/variables.scss
+++ b/scss/base/variables/variables.scss
@@ -19,3 +19,9 @@ $footer-bg: #FFF;
 $footer-copyrights-bg: #FF4365;
 $footer-link-color: #FF4365;
 $copyrights-color: #FFF;
+
+// newsletter
+$newsletter-input-border: #EEE;
+$newsletter-input: #FFF;
+$input-form-text-color:#ababab;
+$newsletter-button-border: #FF4365;
