--- a/templates/components/footer/footer.html
+++ b/templates/components/footer/footer.html
@@ -2,16 +2,16 @@
 <footer class="main-footer">
     <!-- main footer container -->
     <div class="container colored-footer">
-        <div class="row row-col-4 align-items-start">
+        <div class="row´">
             <!-- Logotype and text about company -->
-            <div class="col-sm-3 col-md-4 col-lg-4 footer-about-section">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 footer-about-section">
                 <!-- footer main title -->
                 <h4>Baking Master Web Application</h4>
                 <!-- about app section -->
-                <p class="about-company"></p>
+                <p class="about-website">This website was created for studying purposes only. You can find here lots of different baking recipes and baking equipement.</p>
             </div>
             <!-- footer menu -->
-            <div class="col-sm-3 col-md-4 col-lg-4">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
                 <ul class="footer-menu">
                     <h4>Menu</h4>
                     <li><a href="{{url_for('recipes')}}" class="footer-link">Recipes</a></li>
@@ -23,9 +23,15 @@
                 </ul>
             </div>
             <!-- newsletter -->
-            <div class="col-sm-3 col-md-4 col-lg-4">
+            <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 newsletter-section">
                 <h4>Newsletter</h4>
-                <p class="newsletter-desc">Sign up for our newsletter!</br>Receive notifications about new recipes, baking equipement and all possible discounts codes.</br>Don't be late, we're waiting for you!</p>
+                <p class="newsletter-desc">Sign up for our newsletter! Receive notifications about new recipes, baking equipement and all possible discounts codes. Don't be late, we're waiting for you!</p>
+                <div class="newsletter-form">
+                    <form method="POST" class="newsletter-form">
+                        <input type="email" name="email-address" id="email" placeholder="Enter your email">
+                        <button type="submit" class="button">Subscribe</button>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
