Spelling mistake corrected

--- a/templates/components/footer/footer.html
+++ b/templates/components/footer/footer.html
@@ -15,7 +15,7 @@
                 <ul class="footer-menu">
                     <h4>Menu</h4>
                     <li><a href="{{url_for('recipes')}}" class="footer-link">Recipes</a></li>
-                    <li><a href="{{url_for('equipement')}}" class="footer-link">Equipement</a></li>
+                    <li><a href="{{url_for('equipment')}}" class="footer-link">Equipement</a></li>
                     <li><a href="{{url_for('about')}}" class="footer-link">About</a></li>
                     <li><a href="{{url_for('contact')}}" class="footer-link">Contact</a></li>
                     <li><a href="{{url_for('my_account')}}" class="footer-link">My Account</a></li>
