--- a/templates/components/header/nav.html
+++ b/templates/components/header/nav.html
@@ -13,7 +13,7 @@
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">
           <li><a href="{{url_for('recipes')}}" class="hvr-underline-from-left">Recipes</a></li>
-          <li><a href="{{url_for('equipement')}}" class="hvr-underline-from-left">Equipement</a></li>
+          <li><a href="{{url_for('equipment')}}" class="hvr-underline-from-left">Equipment</a></li>
           <li><a href="{{url_for('about')}}" class="hvr-underline-from-left">About</a></li>
           <li><a href="{{url_for('contact')}}" class="hvr-underline-from-left">Contact</a></li>
         </ul>
