About link replaced with Favourites link

--- a/scss/components/header/nav.scss
+++ b/scss/components/header/nav.scss
@@ -58,6 +58,10 @@
     border: none;
 }
 
+.fav-heart-icon {
+    margin-right: 5px;
+}
+
 @media (max-width: 991.98px) {
     .navbar-brand {
         margin-left: 15px !important;
