--- a/templates/components/footer/footer.html
+++ b/templates/components/footer/footer.html
@@ -18,7 +18,7 @@
                     <li><a href="{{url_for('recipes')}}" class="footer-link">Recipes</a></li>
                     <li><a href="{{url_for('equipment')}}" class="footer-link">Equipement</a></li>
                     <li><a href="{{url_for('site_map')}}" class="footer-link">Site - Map</a></li>
-                    <li><a href="{{url_for('about')}}" class="footer-link">About</a></li>
+                    <li><a href="{{url_for('about')}}" class="footer-link">Favourites</a></li>
                     <li><a href="{{url_for('contact')}}" class="footer-link">Contact</a></li>
                 </ul>
             </div>
@@ -44,6 +44,5 @@
             </p>
         </div>
     </div>
-
 </footer>
 <!-- Footer end -->
