--- a/static/css/style.css
+++ b/static/css/style.css
@@ -74,6 +74,10 @@ h4 {
   border: none;
 }
 
+.fav-heart-icon {
+  margin-right: 5px;
+}
+
 @media (max-width: 991.98px) {
   .navbar-brand {
     margin-left: 15px !important;
