--- a/templates/components/header/nav.html
+++ b/templates/components/header/nav.html
@@ -13,13 +13,13 @@
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">
           <li><a href="{{url_for('recipes')}}" class="hvr-underline-from-left">Recipes</a></li>
+                    <li><a href="{{url_for('favourites')}}" class="hvr-underline-from-left"><i class="far fa-heart fav-heart-icon"></i>Favourites</a></li>
           <li><a href="{{url_for('equipment')}}" class="hvr-underline-from-left">Equipment</a></li>
-          <li><a href="{{url_for('about')}}" class="hvr-underline-from-left">About</a></li>
           <li><a href="{{url_for('contact')}}" class="hvr-underline-from-left">Contact</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li><a href="{{url_for('search_results')}}" class="hvr-underline-from-left">Search</a></li>
-          <li><a href="{{url_for('my_account')}}" class="hvr-underline-from-left">My Account</a></li>
+          <li><a href="{{url_for('my_account')}}" class="hvr-underline-from-left">Login</a></li>
         </ul>
       </div>
     </div>
