Footer menu quick fix, Favourites link changed to About

--- a/templates/components/footer/footer.html
+++ b/templates/components/footer/footer.html
@@ -17,9 +17,9 @@
                     <h4>Worth knowing</h4>
                     <li><a href="{{url_for('recipes')}}" class="footer-link">Recipes</a></li>
                     <li><a href="{{url_for('equipment')}}" class="footer-link">Equipement</a></li>
-                    <li><a href="{{url_for('site_map')}}" class="footer-link">Site - Map</a></li>
-                    <li><a href="{{url_for('about')}}" class="footer-link">Favourites</a></li>
+                    <li><a href="{{url_for('about')}}" class="footer-link">About</a></li>
                     <li><a href="{{url_for('contact')}}" class="footer-link">Contact</a></li>
+                    <li><a href="{{url_for('site_map')}}" class="footer-link">Site - Map</a></li>
                 </ul>
             </div>
             <!-- newsletter -->
@@ -27,7 +27,7 @@
                 <h4>Newsletter</h4>
                 <p class="newsletter-desc">Sign up for our newsletter! Receive notifications about new recipes, baking equipement and all possible discounts codes. Don't be late, we're waiting for you!</p>
                 <div class="newsletter-form">
-                    <form method="POST" class="newsletter-form", id="newsletter-form">
+                    <form method="POST" class="newsletter-form" , id="newsletter-form">
                         <input type="email" name="email-address" id="email" placeholder="Enter your email">
                         <button type="submit" class="button" id="newsletter-button">Subscribe</button>
                     </form>
