Top class added

--- a/templates/components/footer/footer.html
+++ b/templates/components/footer/footer.html
@@ -1,5 +1,5 @@
 <!-- Footer start -->
-<footer class="main-footer">
+<footer class="main-footer section-margin">
     <!-- main footer container -->
     <div class="container colored-footer">
         <div class="row´">
