--- a/scss/components/header/nav.scss
+++ b/scss/components/header/nav.scss
@@ -1,4 +1,7 @@
 .navbar {
+    width: 100%;
+    position: fixed;
+    top: 0;
     z-index: 10000;
     height: 60px;
     background-color: $nav-bg-color;
