--- a/scss/components/footer/footer.scss
+++ b/scss/components/footer/footer.scss
@@ -45,10 +45,11 @@
     font-weight: 400;
     color: $footer-link-color;
     margin-bottom: 5px;
-
+    opacity: 0.8;
     &:hover {
-        color: red;
+        color: $footer-link-color;
         text-decoration: none;
+        opacity: 1;
     }
 }
 
