--- a/static/css/style.css
+++ b/static/css/style.css
@@ -163,10 +163,12 @@ h4 {
   font-weight: 400;
   color: #FF4365;
   margin-bottom: 5px;
+  opacity: 0.8;
 }
 .footer-link:hover {
-  color: red;
+  color: #FF4365;
   text-decoration: none;
+  opacity: 1;
 }
 
 .newsletter-section {
