--- a/templates/components/header/nav.html
+++ b/templates/components/header/nav.html
@@ -1,15 +1,19 @@
+<!-- main container -->
 <nav class="navbar navbar-inverse">
   <div class="container">
     <div class="navbar-header">
+      <!-- dropdown 'hamburger' button -->
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
+      <!-- logotype -->
       <a class="navbar-brand" href="{{url_for('home')}}">
         <img src="/static/images/logotype/Logotype.png" class="logotype" alt="Baking-Master-Logotype"></img>
       </a>
     </div>
+    <!-- collapse nav -->
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li><a href="{{url_for('recipes')}}" class="hvr-underline-from-left">Recipes</a></li>
@@ -17,9 +21,10 @@
         <li><a href="{{url_for('equipment')}}" class="hvr-underline-from-left">Equipment</a></li>
         <li><a href="{{url_for('contact')}}" class="hvr-underline-from-left">Contact</a></li>
       </ul>
+      <!-- search and login links -->
       <ul class="nav navbar-nav navbar-right">
         <li><a href="{{url_for('search_results')}}" class="hvr-underline-from-left">Search</a></li>
-        <li><a href="{{url_for('my_account')}}" class="hvr-underline-from-left">Login</a></li>
+        <li><a href="{{url_for('login')}}" class="hvr-underline-from-left">Login</a></li>
       </ul>
     </div>
   </div>
