Basic style added to login page

--- a/scss/base/variables/variables.scss
+++ b/scss/base/variables/variables.scss
@@ -25,3 +25,16 @@ $newsletter-input-border: #EEE;
 $newsletter-input: #FFF;
 $input-form-text-color:#ababab;
 $newsletter-button-border: #FF4365;
+
+// login page
+$login-card-bg: #FFF;
+
+// login button style
+$login-button-bg: #FF4365;
+$login-button-color: #FFF;
+$login-button-border-color: #FF4365;
+
+// login button hover style
+$login-button-bg-hv: #FFF;
+$login-button-color-hv: #FF4365;
+$login-button-border-color-hv: #FF4365;
