--- a/scss/style.scss
+++ b/scss/style.scss
@@ -17,6 +17,7 @@
 @import 'page-styles/contact.scss';
 @import 'page-styles/equipement.scss';
 @import 'page-styles/favourites.scss';
+@import 'page-styles/login.scss';
 @import 'page-styles/my-account.scss';
 @import 'page-styles/recipes.scss';
 @import 'page-styles/search-result.scss';
