--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap");
 html,
 body {
+  height: 100vh;
   min-height: 100%;
   width: 100%;
   font-size: 1rem;
@@ -120,6 +121,78 @@ h4 {
     bottom: 4px;
   }
 }
+.user_card {
+  height: 400px;
+  width: 350px;
+  margin-top: auto;
+  margin-bottom: auto;
+  background: #FFF;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  padding: 10px;
+  box-shadow: 0 0px 14px 1px rgba(0, 0, 0, 0.15), 0 0px 0px 0 rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: 0 0px 14px 1px rgba(0, 0, 0, 0.15), 0 0px 0px 0 rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: 0 0px 14px 1px rgba(0, 0, 0, 0.15), 0 0px 0px 0 rgba(0, 0, 0, 0.15);
+  border-radius: 5px;
+}
+
+.brand_logo_container {
+  position: absolute;
+  height: 170px;
+  width: 170px;
+  top: -75px;
+  border-radius: 50%;
+  background: #FFF;
+  padding: 10px;
+  text-align: center;
+}
+
+.brand_logo {
+  height: 150px;
+  width: 150px;
+  border-radius: 50%;
+  border: 2px solid white;
+}
+
+.form_container {
+  margin-top: 100px;
+}
+
+.login_btn {
+  width: 100%;
+  background: #FF4365;
+  color: #FFF;
+  border: 1px solid #FF4365;
+}
+.login_btn:hover {
+  background: #FFF;
+  color: #FF4365;
+  border: 1px solid #FF4365;
+}
+
+.login_container {
+  padding: 0 2rem;
+}
+
+.input-group-text {
+  background: #c0392b !important;
+  color: white !important;
+  border: 0 !important;
+  border-radius: 0.25rem 0 0 0.25rem !important;
+}
+
+.input_user,
+.input_pass:focus {
+  box-shadow: none !important;
+  outline: 0px !important;
+}
+
+.custom-checkbox .custom-control-input:checked ~ .custom-control-label::before {
+  background-color: #c0392b !important;
+}
+
 .main-footer {
   min-height: 300px;
   width: 100%;
