--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,4 @@
+// import Roboto font family
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
 
 //import main styles and variables
@@ -9,7 +10,11 @@
 @import 'components/cards/recipe-card.scss';
 @import 'components/carousel/carousel.scss';
 @import 'components/forms/contact-form.scss';
-@import 'components/forms/user-form.scss';
+@import 'components/forms/login-form.scss';
+@import 'components/forms/register-form.scss';
+@import 'components/footer/footer.scss';
+
+//import media styles
 @import 'media/media.scss';
 
 //import pages styles
@@ -22,4 +27,3 @@
 @import 'page-styles/recipes.scss';
 @import 'page-styles/search-result.scss';
 @import 'page-styles/site-map.scss';
-@import 'components/footer/footer.scss';
