--- a/templates/pages/equipment.html
+++ b/templates/pages/equipment.html
@@ -1,3 +1,4 @@
-{% extends 'layout/base.html' %} {% block content %}
+{% extends 'layout/base.html' %}
+{% block content %}
 <h1 class="hidden">Equipement</h1>
 {% endblock %}
